--- a/requirements.txt
+++ b/requirements.txt
@@ -47,5 +47,5 @@ ipywidgets
 jupyter-dash
 
 # PyTorch (CPU version - users can install GPU version separately if needed)
---index-url https://download.pytorch.org/whl/cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch
