Adds Smart CV/Cover Letter generator
Introduces a new "Smart CV" tab to the application, providing a comprehensive tool for generating professional CVs and cover letters.

This feature allows users to:
- Generate tailored CVs and cover letters using various LLM providers (OpenAI, Anthropic, Ollama).
- Auto-fill personal information by scraping web profiles or parsing job descriptions.
- Export generated documents directly to PDF.
- Configure LLM settings and review generation history.

Integrates necessary dependencies and updates the main application to include this new, valuable utility.

--- a/.gitignore
+++ b/.gitignore
@@ -211,6 +211,9 @@ __marimo__/
 
 #Ignore vscode AI rules
 .github/instructions/codacy.instructions.md
+.codacy/cli.sh
 
 
 .DS_Store
+
+tabs/smart_cv/conversation_history.json
